# SmartCash

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
artifacts/demo/: backtest_summary.csv  feature_snapshots.csv  manifest.json  markout_labels.csv  shock_events.csv  shock_outcomes.csv
docs/: peter-gomber-migration.md  research-plan.md
docs/adr/: 0001-smart-money-owns-the-microstructure-event-clock.md  0002-use-a-dual-plane-microstructure-snapshot.md  0003-separate-market-event-steps-from-decision-checkpoints.md  0011-name-the-project-smartcash.md  (+21 more)
reports/: phase-00-data-acceptance-2026-07-13.md  phase-01-beast-transform-2026-07-13.md  phase-02-vault-quality-2026-01-08-00700.md  phase-03-capture-and-direction-evidence-2026-07-14.md  phase-04-xtquant-subscription-ack-evidence-2026-07-14.md  phase-05-thousand-capture-interface-audit-2026-07-14.md  phase-06-server-capture-evidence-search-2026-07-14.md  phase-07-ipo-infra-api-and-beast-integration-audit-2026-07-14.md  phase-08-historical-archive-backtest-2026-01-08-00700.md  prototype-report.md
tests/: test_candidate_lifecycle.py  test_cli_data_quality.py  test_data_quality.py  test_demo_pipeline.py  test_flow_price_state.py  test_identity_domain.py  test_l2_normalization.py  test_lemnis_adapter.py  test_lemnis_snapshot_sidecar.py  test_microstructure_step_snapshot.py  test_order_book_features.py  test_project_identity.py  test_protected_ioc.py  test_replay_and_markout.py  test_shock_research.py  test_smart_money_flow.py  test_vault_beast_contract.py  test_walk_forward.py  test_xtquant_normalization.py
(+28 files in other folders)
