[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smartcash"
version = "0.1.0"
description = "Causal HK market-microstructure research and execution engine"
requires-python = ">=3.11"

[project.scripts]
smartcash-demo = "smartcash.demo:main"
smartcash-replay = "smartcash.cli:main"

[project.optional-dependencies]
research = ["numpy>=1.26", "pandas>=2.1", "matplotlib>=3.8", "pyarrow>=22.0"]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
